--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DJANGO_SECRET_KEY=replace-me
 DJANGO_DEBUG=False
-DJANGO_ALLOWED_HOSTS=localhost,backend
+DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,backend,nginx,47.109.18.154
 
 DB_ENGINE=django.db.backends.postgresql
 DB_NAME=antifraud
@@ -9,10 +9,22 @@ DB_PASSWORD=antifraud
 DB_HOST=postgres
 DB_PORT=5432
 
-NEO4J_URI=bolt://neo4j:7687
+NEO4J_URI=neo4j://neo4j:7687
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=neo4j-password
 NEO4J_DATABASE=neo4j
 
-CORS_ALLOWED_ORIGINS=http://localhost:3100,http://127.0.0.1:3100
-DASHSCOPE_API_KEY=your-dashscope-key
+CORS_ALLOWED_ORIGINS=http://localhost:3100,http://127.0.0.1:3100,http://localhost:3000,http://127.0.0.1:3000
+DASHSCOPE_API_KEY=sk-0635d6503ccd4310be89bb19b3c49339
+
+NUXT_PUBLIC_API_BASE=/api
+NUXT_SERVER_API_BASE=http://backend:8000/api
+FRONTEND_HOST=0.0.0.0
+FRONTEND_PORT=3000
+FRONTEND_NITRO_PORT=3000
+
+DEFAULT_ADMIN_USERNAME=Charlun
+DEFAULT_ADMIN_NICKNAME=Charlun
+DEFAULT_ADMIN_EMAIL=charlunn@icloud.com
+DEFAULT_ADMIN_PHONE=17309714040
+DEFAULT_ADMIN_PASSWORD=xyx20040611
